--- a/채널코퍼레이션/Java/인터페이스와 추상클래스의 차이.md
+++ b/채널코퍼레이션/Java/인터페이스와 추상클래스의 차이.md
@@ -2,6 +2,66 @@
 
 ```
 
+[이펙티브 자바]
+
+자바가 제공하는 다중 구현 메커니즘은 인터페이스와 추상 클래스, 이렇게 두 가지다
+-> 자바 8부터 인터페이스도 디폴트 메소드(default method)를 제공할 수 있게 되어,
+   이제는 두 메커니즘 모두 인스턴스 메소드를 구현 형태로 제공할 수 있다
+
+- 한편, 둘의 가장 큰 차이는 추상 클래스가 정의한 타입을 구현하는 클래스는
+  반드시 추상 클래스의 하위 클래스가 되어야 한다는 점이다.
+-> 자바는 단일 상속만 지원하니, 추상 클래스 방식은 새로운 타입을 정의하는데 커다란 제약을 안게 되는 셈이다.
+-> 반면, 인터페이스가 선언한 메서드를 모두 정의하고, 그 일반 규약을 잘 지킨 클래스라면 다른 어떤 클래스를 상속했든
+   같은 타입으로 취급된다.
+
+- 기존 클래스에도 손쉽게 새로운 인터페이스를 구현해넣을 수 있다.
+-> 인터페이스가 요구하는 메서드를 추가하고, 클래스 선언에 implements 구문만 추가하면 끝이다.
+-> 자바 플랫폼에서도 Comparable, Iterable, AutoCloseable 인터페이스가 새로 추가됐을 때,
+   표준 라이브러리의 수많은 기존 클래스가 이 인터페이스들을 구현한 채 릴리스됐다.
+
+- 반면 기존 클래스 위에 새로운 추상 클래스를 끼워넣기는 어려운 게 일반적이다.
+-> 두 클래스가 같은 추상 클래스를 확장하길 원한다면, 그 추상 클래스는 계층구조상 두 클래스의 공통 조상이어야 한다.
+-> 안타깝게도 이 방식은 클래스 계층구조에 커다란 혼란을 일으킨다.
+-> 새로 추가된 추상 클래스의 모든 자손이 이를 상속하게 되는 것이다.
+-> 그렇게 하는 것이 적절하지 않은 상황에서도 강제로 말이다.
+
+- 인터페이스는 믹스인(mixin) 정의에 안성맞춤이다.
+-> 믹스인이란 클래스가 구현할 수 있는 타입으로, 믹스인을 구현한 클래스에 원래의 '주된 타입'외에도 특정 선택적 행위를
+   제공한다고 선언하는 효과를 준다.
+-> 예컨대 Comparable은 자신을 구현한 클래스의 인스턴스들끼리는 순서를 정할 수 있다고 선언하는 믹스인 인터페이스다.
+-> 이처럼 대상 타입의 주된 기능에 선택적 기능을 '혼합'한다고 해서 믹스인이라 부른다.
+-> 추상 클래스로는 믹스인을 정의할 수 없다.
+-> 이유는 앞서와 같이, 기존 클래스에 덧씌울 수 없기 때문이다.
+-> 클래스는 두 부모를 섬길 수 없고, 클래스 계층구조에는 믹스인을 삽입하기에 합리적인 위치가 없기 때문이다.
+
+- 인터페이스로는 계층구조가 없는 타입 프레임워크를 만들 수 있다.
+-> 타입을 계층적으로 정의하면 수많은 개념을 구조적으로 잘 표현할 수 있지만,
+   현실에는 계층을 엄격히 구분하기 어려운 개념도 있다.
+-> 예를 들어 가수(Singer) 인터페이스와 작곡가(Songwriter) 인터페이스가 있다고 해보자.
+
+public interface Singer {
+  AudioClip sing(Song s);
+}
+
+public interface Songwriter {
+  Song compose(int chartPosition);
+}
+
+- 우리 주변엔 작곡도 하는 가수가 제법 있다. 이 코드처럼 타입을 인터페이스로 정의하면
+  가수 클래스가 Singer와 Songwriter 모두를 구현해도 전혀 문제되지 않는다
+-> 심지어 Singer와 Songwriter 모두를 확장하고 새로운 메서드까지 추가한 제3의 인터페이스를 정의할 수도 있다.
+
+public interface SingerSongwriter extends Singer, Songwriter {
+   AudioClip strum();
+   void actSensitive();
+}
+
+- 이 정도의 유연성이 항상 필요하지는 않지만, 이렇게 만들어둔 인터페이스가 결정적인 도움을 줄 수도 있다
+-> 같은 구조를 클래스로 만들려면 가능한 조합 전부를 각각의 클래스로 정의한 고도비만 계층구조가 만들어질 것이다.
+-> 속성이 n개라면 지원해야 할 조합의 수는 2^n개나 된다.
+-> 흔히 조합 폭발이라 부르는 현상이다.
+-> 거대한 클래스 계층구조에는 공통 기능을 정의해놓은 타입이 없으니, 자칫 매개변수 타입만 다른 메서드들을
+   수없이 많이 가진 거대한 클래스를 낳을 수 있다.
 
 
 ```
