--- a/보이저엑스/자료구조/4. 힙 정렬.md
+++ b/보이저엑스/자료구조/4. 힙 정렬.md
@@ -5,6 +5,75 @@
 
 
 
+이 장에서는 새로운 정렬 알고리즘을 소개한다.
+-> 병합 정렬처럼 힙 정렬의 수행 시간도 O(nlgn)이다.
+-> 그리고 삽입 정렬처럼 (병합 정렬과는 다르게) 힙 정렬은 내부 정렬이다.
+-> 즉, 정렬할 때 입력 배열에서 상수 개의 원소를 초과해서 배열 밖에 저장하는 일은 없다
+-> 따라서 힙 정렬은 이미 논의한 두 정렬 알고리즘의 장점을 혼합한 것이다.
+
+- 힙 정렬에서는 또 다른 알고리즘 설계 기술을 도입한다.
+-> 알고리즘 실행 중 정보를 다루기 위해 특수한 자료구조인 "힙"이라는 자료구조를 이용한다.
+-> 힙 자료구조는 힙 정렬에 사용할 뿐만 아니라 효율적인 우선순위 큐를 만드는데도 이용할 수 있다
+-> 힙 자료구조는 이후에 나오는 알고리즘에서도 사용한다.
+
+- "힙"이라는 용어는 원래 힙 정렬으로부터 나온 말이다
+-> 그러나 이 용어는 Lisp나 자바와 같은 프로그래밍 언어가 제공하는 "공간"이라는 뜻으로 사용되어 왔다
+-> 그러나 여기서 힙 자료구조는 공간이 아니다
+-> 앞으로 이 책에서 힙이라는 용어를 사용할 때는 이 장에서 정의한 자료구조를 뜻한다.
+
+6.1 힙
+- (이진) 힙 자료구조는 그림 6.1과 같이 완전 이진 트리로 볼 수 있는 배열 객체이다
+-> 트리의 각 노드는 배열에서 한 원소와 대응된다.
+-> 이 트리는 가장 낮은 레벨을 빼고는 완전히 차 있고, 가장 낮은 레벨은 왼쪽부터 채운다.
+-> 힙을 나타내는 배열 A는 인자를 두 개 가진다.
+-> 바로 배열 A에 있는 원소의 개수를 나타내는 A.length와 배열 A의 원소 중 힙에 속하는 원소의 개수를 나타내는
+   A.heap-size다
+
+- 그리고 0<=A.heap-size<=A.length다
+-> 다시 말해 A[1...A.length]에 있는 값이 다 유용할 수는 있지만, A[1..A.heap-size]뒤에 있는 것은 힙의 원소가 아니다
+-> 트리의 루트는 A[1]이다.
+-> 그리고 노드의 인덱스 i가 주어지면 부모 PARENT(i), 왼쪽 자식 LEFT(i), 오른쪽 자식 RIGHT(i)는 다음과 같이 간단히 구할 수 있다.
+
+PARENT(i)
+return [i/2]
+
+LEFT(i)
+return 2i
+
+RIGHT(i)
+return 2i+1
+
+- 대부분의 컴퓨터에서 LEFT 프로시저는 i의 이진 표현을 왼쪽으로 한 비트 시프트하는 연산 하나로 2i를 간단하게 계산할 수 있다
+-> 비슷하게 RIGHT 프로시저는 i의 이진 표현을 왼쪽으로 한 비트 시프트한 다음 최하위 비트에 1을 더함으로써 2i+1을 빠르게 계산할 수 있다
+-> PARENT 프로시저는 i를 오른쪽으로 한 비트 시프트하여 [i/2]을 계산할 수 있다
+-> 힙 정렬을 잘 구현한 프로그램에서는 이 세 프로시저를 "매크로"나 "인라인" 프로시저로 구현하는 경우가 많다
+
+- 이진 힙에는 최대 힙과 최소 힙 두 가지가 있다
+-> 두 가지 모두 노드의 값이 힙 특성을 만족한다.
+-> 힙 특성은 힙의 종류에 따라 달라진다.
+-> 최대 힙에서 최대 힙 특성은 루트 노드를 제외한 모든 노드 i에 대해 다음이 된다.
+A[PARENT(i)] >= A[i]
+
+- 즉, 임의의 노드 값은 그 부모의 값보다 클 수 없다.
+-> 그러므로 최대 힙에서 가장 큰 값은 루트에 저장되고, 서브 트리는 자신의 루트보다 크지 않은 값을 가진다.
+-> 최소 힙은 정반대 방법으로 구성된다.
+-> 그리고 최소 힙 특성은 루트 노들르 제외한 모든 노드 i에 대해 다음이 된다.
+A[PARENT(i)] <= A[i]
+
+- 즉, 최소 힙에서 최솟값은 루트에 있다.
+-> 힙 정렬 알고리즘에서는 최대 힙을 사용한다.
+-> 최소 힙은 6.5절에서 논의할 우선순위 큐에서 사용한다.
+-> 어떤 상황에서든 최대 힙이 필요한지, 아니면 최소 힙이 필요한지를 정확하게 명시할 것이다.
+-> 그리고 특성이 최대 힙과 최소 힙 양쪽에 적용될 때는 "힙"이라는 용어를 사용하겠다.
+
+- 힙을 트리로 보는 관점에서 노드의 높이를 그 노드에서 리프에 이르는 하향 경로 중 가장 긴 것의 간선 수로 정의한다.
+-> 그리고 힙의 높이는 루트의 높이로 한다.
+-> 힙은 완전 이진 트리를 기반으로 하므로 원소 개수가 n인 힙의 높이는 O(lgn)이다.
+-> 힙에 대한 기본 연산의 수행 시간은 오래 걸려도 트리의 높이에 비례하는 정도기 때문에 O(lgn)이다.
+-> 이 장에서는 몇 가지 기본 프로시저를 제시하고 정렬 알고리즘과 우선순위 큐 자료구조에서 이것이 사용되는 방법을 보인다.
+
+
+
 
 
 ```
